--- a/.github/workflows/flash_device.yml
+++ b/.github/workflows/flash_device.yml
@@ -23,10 +23,10 @@ jobs:
     #     run: |
     #       python -m pip install --upgrade pip
     #       pip install -r .github/workflows/helpers/requirements.txt
-    
+
       - name: Build firmware
         run: |
-            make -C ${{ github.workspace }} all -j
+            cmake --build --preset=Debug
 
       - name: Flash the device
         env:
