run cmake preset debug before attempting build

--- a/.github/workflows/flash_device.yml
+++ b/.github/workflows/flash_device.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Build firmware
         run: |
+            cmake --preset=Debug
             cmake --build --preset=Debug
 
       - name: Flash the device
