--- a/.github/workflows/flash_device.yml
+++ b/.github/workflows/flash_device.yml
@@ -44,7 +44,8 @@ jobs:
 
   ai_code_review:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if:  github.event_name == 'pull_request' && !contains(github.event.pull_request.title, '@NOAI')
+
 
     permissions:
       contents: read
